// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`switch demo > renders _semantic correctly 1`] = `
<div
  class="semantic-preview-container"
  data-v-dfc8ebef=""
>
  <div
    class="ant-row css-var-root semantic-preview-row"
    data-v-dfc8ebef=""
  >
    <div
      class="ant-col ant-col-16 css-var-root semantic-preview-col"
      data-v-dfc8ebef=""
    >
      <button
        aria-checked="false"
        checked="false"
        class="ant-switch semantic-mark-root css-var-v-0 ant-switch-disabled"
        disabled=""
        role="switch"
        type="button"
      >
        <div
          class="ant-switch-handle semantic-mark-indicator"
        >
          <!---->
        </div>
        <span
          class="ant-switch-inner"
        >
          <span
            class="ant-switch-inner-checked semantic-mark-content"
          >
            on
          </span>
          <span
            class="ant-switch-inner-unchecked semantic-mark-content"
          >
            off
          </span>
        </span>
      </button>
    </div>
    <div
      class="ant-col ant-col-8 css-var-root"
      data-v-dfc8ebef=""
    >
      <ul
        class="semantic-list"
        data-v-dfc8ebef=""
      >
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  root
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <span
                  class="ant-tag ant-tag-filled ant-tag-blue css-var-root"
                  data-v-dfc8ebef=""
                >
                  1.0.0
                  <!---->
                  <!---->
                  <!---->
                </span>
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Root element with min-width, height, line-height, vertical alignment, background color, border, border radius, cursor style, transition animations, user selection and other basic switch container styles
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  content
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <span
                  class="ant-tag ant-tag-filled ant-tag-blue css-var-root"
                  data-v-dfc8ebef=""
                >
                  1.0.0
                  <!---->
                  <!---->
                  <!---->
                </span>
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Content element with block display, overflow hidden, border radius, height, padding, transition animations and other switch content area layout and styles
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  indicator
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <span
                  class="ant-tag ant-tag-filled ant-tag-blue css-var-root"
                  data-v-dfc8ebef=""
                >
                  1.0.3
                  <!---->
                  <!---->
                  <!---->
                </span>
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Indicator element with absolute positioning, width, height, background color, border radius, shadow, transition animations and other switch handle styles and interactive effects
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`switch demo > renders basic correctly 1`] = `
<button
  aria-checked="true"
  checked="true"
  class="ant-switch css-var-root ant-switch-checked"
  role="switch"
  type="button"
>
  <div
    class="ant-switch-handle"
  >
    <!---->
  </div>
  <span
    class="ant-switch-inner"
  >
    <span
      class="ant-switch-inner-checked"
    >
      <!---->
    </span>
    <span
      class="ant-switch-inner-unchecked"
    >
      <!---->
    </span>
  </span>
</button>
`;

exports[`switch demo > renders component-token correctly 1`] = `
<div
  data-v-app=""
>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-var-v-0"
  >
    <div
      class="ant-space-item"
    >
      <button
        aria-checked="true"
        checked="true"
        class="ant-switch css-var-v-0 ant-switch-checked"
        role="switch"
        type="button"
      >
        <div
          class="ant-switch-handle"
        >
          <!---->
        </div>
        <span
          class="ant-switch-inner"
        >
          <span
            class="ant-switch-inner-checked"
          >
            <!---->
          </span>
          <span
            class="ant-switch-inner-unchecked"
          >
            <!---->
          </span>
        </span>
      </button>
    </div>
    <!---->
  </div>
</div>
`;

exports[`switch demo > renders disabled correctly 1`] = `
<div
  class="ant-space ant-space-vertical ant-space-gap-row-small ant-space-gap-col-small css-var-root"
>
  <div
    class="ant-space-item"
  >
    <button
      aria-checked="true"
      checked="true"
      class="ant-switch css-var-root ant-switch-checked ant-switch-disabled"
      disabled=""
      role="switch"
      type="button"
    >
      <div
        class="ant-switch-handle"
      >
        <!---->
      </div>
      <span
        class="ant-switch-inner"
      >
        <span
          class="ant-switch-inner-checked"
        >
          <!---->
        </span>
        <span
          class="ant-switch-inner-unchecked"
        >
          <!---->
        </span>
      </span>
    </button>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <button
      class="ant-btn css-var-root ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
      type="button"
    >
      <transition-stub
        appear="false"
        css="true"
        name="ant-btn-loading-icon-motion"
        persisted="false"
      >
        <!---->
      </transition-stub>
      <span>
         Toggle disabled 
      </span>
      <!---->
    </button>
  </div>
  <!---->
</div>
`;

exports[`switch demo > renders loading correctly 1`] = `
<div
  data-v-app=""
>
  <button
    aria-checked="true"
    checked="true"
    class="ant-switch ant-switch-loading css-var-root ant-switch-checked ant-switch-disabled"
    disabled=""
    role="switch"
    type="button"
  >
    <div
      class="ant-switch-handle"
    >
      <span
        aria-label="loading"
        class="anticon anticon-loading anticon-spin ant-switch-loading-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="loading"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
          />
        </svg>
      </span>
    </div>
    <span
      class="ant-switch-inner"
    >
      <span
        class="ant-switch-inner-checked"
      >
        <!---->
      </span>
      <span
        class="ant-switch-inner-unchecked"
      >
        <!---->
      </span>
    </span>
  </button>
  <br />
  <button
    aria-checked="false"
    checked="false"
    class="ant-switch ant-switch-small ant-switch-loading css-var-root ant-switch-disabled"
    disabled=""
    role="switch"
    type="button"
  >
    <div
      class="ant-switch-handle"
    >
      <span
        aria-label="loading"
        class="anticon anticon-loading anticon-spin ant-switch-loading-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="loading"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
          />
        </svg>
      </span>
    </div>
    <span
      class="ant-switch-inner"
    >
      <span
        class="ant-switch-inner-checked"
      >
        <!---->
      </span>
      <span
        class="ant-switch-inner-unchecked"
      >
        <!---->
      </span>
    </span>
  </button>
</div>
`;

exports[`switch demo > renders size correctly 1`] = `
<div
  data-v-app=""
>
  <button
    aria-checked="true"
    checked="true"
    class="ant-switch css-var-root ant-switch-checked"
    role="switch"
    type="button"
  >
    <div
      class="ant-switch-handle"
    >
      <!---->
    </div>
    <span
      class="ant-switch-inner"
    >
      <span
        class="ant-switch-inner-checked"
      >
        <!---->
      </span>
      <span
        class="ant-switch-inner-unchecked"
      >
        <!---->
      </span>
    </span>
  </button>
  <br />
  <button
    aria-checked="true"
    checked="true"
    class="ant-switch ant-switch-small css-var-root ant-switch-checked"
    role="switch"
    type="button"
  >
    <div
      class="ant-switch-handle"
    >
      <!---->
    </div>
    <span
      class="ant-switch-inner"
    >
      <span
        class="ant-switch-inner-checked"
      >
        <!---->
      </span>
      <span
        class="ant-switch-inner-unchecked"
      >
        <!---->
      </span>
    </span>
  </button>
</div>
`;

exports[`switch demo > renders style-class correctly 1`] = `
<div
  class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-middle ant-flex-vertical"
  data-v-355da09f=""
>
  <button
    aria-checked="false"
    checked="false"
    class="ant-switch ant-switch-small custom-switch-root css-var-root"
    data-v-355da09f=""
    role="switch"
    style="background-color: rgb(245, 210, 210);"
    type="button"
  >
    <div
      class="ant-switch-handle"
    >
      <!---->
    </div>
    <span
      class="ant-switch-inner"
    >
      <span
        class="ant-switch-inner-checked"
      >
        on
      </span>
      <span
        class="ant-switch-inner-unchecked"
      >
        off
      </span>
    </span>
  </button>
  <button
    aria-checked="false"
    checked="false"
    class="ant-switch custom-switch-root css-var-root"
    data-v-355da09f=""
    role="switch"
    style="background-color: rgb(189, 227, 195);"
    type="button"
  >
    <div
      class="ant-switch-handle"
    >
      <!---->
    </div>
    <span
      class="ant-switch-inner"
    >
      <span
        class="ant-switch-inner-checked"
      >
        <!---->
      </span>
      <span
        class="ant-switch-inner-unchecked"
      >
        <!---->
      </span>
    </span>
  </button>
</div>
`;

exports[`switch demo > renders text correctly 1`] = `
<div
  class="ant-space ant-space-vertical ant-space-gap-row-small ant-space-gap-col-small css-var-root"
>
  <div
    class="ant-space-item"
  >
    <button
      aria-checked="true"
      checked="true"
      class="ant-switch css-var-root ant-switch-checked"
      role="switch"
      type="button"
    >
      <div
        class="ant-switch-handle"
      >
        <!---->
      </div>
      <span
        class="ant-switch-inner"
      >
        <span
          class="ant-switch-inner-checked"
        >
          开启
        </span>
        <span
          class="ant-switch-inner-unchecked"
        >
          关闭
        </span>
      </span>
    </button>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <button
      aria-checked="false"
      checked="false"
      class="ant-switch css-var-root"
      role="switch"
      type="button"
    >
      <div
        class="ant-switch-handle"
      >
        <!---->
      </div>
      <span
        class="ant-switch-inner"
      >
        <span
          class="ant-switch-inner-checked"
        >
          1
        </span>
        <span
          class="ant-switch-inner-unchecked"
        >
          0
        </span>
      </span>
    </button>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <button
      aria-checked="true"
      checked="true"
      class="ant-switch css-var-root ant-switch-checked"
      role="switch"
      type="button"
    >
      <div
        class="ant-switch-handle"
      >
        <!---->
      </div>
      <span
        class="ant-switch-inner"
      >
        <span
          class="ant-switch-inner-checked"
        >
          <span
            aria-label="check"
            class="anticon anticon-check"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="check"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
              />
            </svg>
          </span>
        </span>
        <span
          class="ant-switch-inner-unchecked"
        >
          <span
            aria-label="close"
            class="anticon anticon-close"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="close"
              fill="currentColor"
              fill-rule="evenodd"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
              />
            </svg>
          </span>
        </span>
      </span>
    </button>
  </div>
  <!---->
</div>
`;
